crates/parser/tests/snapshots/surface_lexer_test__adjacent_tokens.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"foo(42)\")"
---
- Ident: foo
- LParen
- Int: 42
- RParen
