crates/parser/tests/snapshots/surface_lexer_test__arrow_vs_minus.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"-> -\")"
---
- Arrow
- Minus
