crates/parser/tests/snapshots/surface_lexer_test__bool_literals.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"true false\")"
---
- Bool: true
- Bool: false
