crates/parser/tests/snapshots/surface_lexer_test__delimiters.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"{ } ( ) [ ]\")"
---
- LBrace
- RBrace
- LParen
- RParen
- LBracket
- RBracket
