crates/parser/tests/snapshots/surface_lexer_test__eq_vs_assign_vs_fat_arrow.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"== = =>\")"
---
- Eq
- Assign
- FatArrow
