crates/parser/tests/snapshots/surface_lexer_test__identifiers.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"foo bar MyType x1 snake_case\")"
---
- Ident: foo
- Ident: bar
- Ident: MyType
- Ident: x1
- Ident: snake_case
