crates/parser/tests/snapshots/surface_lexer_test__line_comment.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"# this is a comment\\n42\")"
---
- Int: 42
