crates/parser/tests/snapshots/surface_lexer_test__multi_char_operators.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"== != <= >= => -> && ||\")"
---
- Eq
- Neq
- Le
- Ge
- FatArrow
- Arrow
- And
- Or
