crates/parser/tests/snapshots/surface_lexer_test__or_vs_pipe.snap
---
source: crates/parser/tests/surface_lexer_test.rs
expression: "surface_lex(\"|| |\")"
---
- Or
- Pipe
